Modified index.html nav+header with IDs (nav = navbar, header = page-header). Added 120px top margin to page-header after adding the sticky CSS styling to the navbar to avoid clipping. Modified new-tweet.css to remove some redundant CSS stylings that were used to overwrite old 'header' styles which are now gone due to usage of page-header ID.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -12,7 +12,7 @@
 
 
 /* Additional CSS */
-header {
+#page-header {
   display: flex;
   height: 400px;
   flex-direction: column;
@@ -20,6 +20,7 @@ header {
   background-color: #d49a37;
   background-image: url("https://www.transparenttextures.com/patterns/foggy-birds.png");
   z-index:1;
+  margin-top: 120px; /* Added after sticky nav was implemented - no clipping */
 }
 
 .avatar {
