--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -25,11 +25,7 @@
  /* Default styling */
 .container .new-tweet form #tweet-text{
   display: flex;
-  background-color: transparent;
-  border: gray 5px;
-  border-top: 0px;
-  border-left: 0px;
-  border-right: 0px;
+  border-bottom: gray 5px;
   border-style: solid;
   font-weight: 600;
   height: 65px;
